# fuel-map-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.ci-cd  README.md  docker-compose.yml
.github/workflows/: build.yml  test.yml
docs/: fuel_map.yaml
migrations/: 20220412195327_create_site.down.sql  20220412195327_create_site.up.sql  20220521181530_site_null_constraints.down.sql  20220521181530_site_null_constraints.up.sql
src/: main.rs
src/endpoint/: mod.rs  site.rs
src/endpoints/: mod.rs
src/infra/: postgres.rs
src/infrastructure/: postgres.rs
src/repo/: database.rs  site.rs
src/service/: mod.rs
